[project]
name = "tass"
version = "0.1.14"
description = "A terminal assistant that allows you to ask an LLM to run commands."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Can Cetin"}]

dependencies = [
    "prompt-toolkit>=3.0.52",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project.urls]
Homepage = "https://github.com/cetincan0/tass"

[project.scripts]
tass = "src.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "pytest>=9.0.2",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "ISC",
    "SIM",
    "RUF",
    "UP",
    "W",
]

ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["tass"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.10"
include = ["src/**/*.py", "tests/**/*.py"]
venvPath = "."
venv = ".venv"
